<resources>
    <string name="app_name">Medicinal Plants</string>
    <string name="tittle">Best 20 Medicinal Plants</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="pt1">Aloe-vera</string>
    <string name="pt2">Calendula</string>
    <string name="pt3">Gotu-kola</string>
    <string name="pt4">Globe Artichoke</string>
    <string name="pt5">Ashwangandha</string>
    <string name="pt6">Bryophyllum, Panfuti</string>
    <string name="pt7">Costus</string>
    <string name="pt8">Great Burdock</string>
    <string name="pt9">Echinacea</string>
    <string name="pt10">Lavender</string>
    <string name="pt11">Lemon Balm</string>
    <string name="pt12">Lemon Grass</string>
    <string name="pt13">Marsh Mallow</string>
    <string name="pt14">Fenugreek, Methi</string>
    <string name="pt15">Peppermint</string>
    <string name="pt16">Vitex Negundo</string>
    <string name="pt17">Tulsi</string>
    <string name="pt18">Rosemary</string>
    <string name="pt19">Sage</string>
    <string name="pt20">Siberian Ginseng</string>
</resources>
