<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/medicinal">


    <TextView
        android:id="@+id/textView"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:background="@color/mainColor"
        android:padding="@dimen/headerFontSize"
        android:text="@string/tittle"
        android:textColor="@color/textColor"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:background="@color/medicinalbackgroundColor"
        android:onClick="pt1"
        android:text="@string/pt1"
        android:textColor="@color/medicinaltextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:background="@color/medicinalbackgroundColor"
        android:onClick="pt2"
        android:text="@string/pt2"
        android:textColor="@color/medicinaltextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button3"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:background="@color/medicinalbackgroundColor"
        android:onClick="pt3"
        android:text="@string/pt3"
        android:textColor="@color/medicinaltextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:background="@color/medicinalbackgroundColor"
        android:onClick="pt4"
        android:text="@string/pt4"
        android:textColor="@color/medicinaltextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button5"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:background="@color/medicinalbackgroundColor"
        android:onClick="pt5"
        android:text="@string/pt5"
        android:textColor="@color/medicinaltextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button6"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:background="@color/medicinalbackgroundColor"
        android:onClick="pt6"
        android:text="@string/pt6"
        android:textColor="@color/medicinaltextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button7"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:background="@color/medicinalbackgroundColor"
        android:onClick="pt7"
        android:text="@string/pt7"
        android:textColor="@color/medicinaltextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button8"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:background="@color/medicinalbackgroundColor"
        android:onClick="pt8"
        android:text="@string/pt8"
        android:textColor="@color/medicinaltextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button9"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:background="@color/medicinalbackgroundColor"
        android:onClick="pt9"
        android:text="@string/pt9"
        android:textColor="@color/medicinaltextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/button10"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:background="@color/medicinalbackgroundColor"
        android:onClick="pt10"
        android:text="@string/pt10"
        android:textColor="@color/medicinaltextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <Button
        android:id="@+id/button11"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:background="@color/medicinalbackgroundColor"
        android:onClick="next"
        android:text="@string/next"
        android:textColor="@color/medicinaltextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button10" />
</androidx.constraintlayout.widget.ConstraintLayout>