<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity"
    android:background="@drawable/medicinal">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:background="@color/mainColor"
        android:padding="@dimen/headerFontSize"
        android:text="@string/tittle"
        android:textColor="@color/textColor"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button12"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:background="@color/medicinalbackgroundColor"
        android:onClick="pt12"
        android:text="@string/pt12"
        android:textColor="@color/medicinaltextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button15" />

    <Button
        android:id="@+id/button13"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:background="@color/medicinalbackgroundColor"
        android:onClick="pt13"
        android:text="@string/pt13"
        android:textColor="@color/medicinaltextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button12" />

    <Button
        android:id="@+id/button14"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:background="@color/medicinalbackgroundColor"
        android:onClick="pt14"
        android:text="@string/pt14"
        android:textColor="@color/medicinaltextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button13" />

    <Button
        android:id="@+id/button15"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:background="@color/medicinalbackgroundColor"
        android:onClick="pt11"
        android:text="@string/pt11"
        android:textColor="@color/medicinaltextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button16"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:background="@color/medicinalbackgroundColor"
        android:onClick="pt15"
        android:text="@string/pt15"
        android:textColor="@color/medicinaltextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button14" />

    <Button
        android:id="@+id/button17"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:background="@color/medicinalbackgroundColor"
        android:onClick="pt16"
        android:text="@string/pt16"
        android:textColor="@color/medicinaltextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button16" />

    <Button
        android:id="@+id/button18"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:background="@color/medicinalbackgroundColor"
        android:onClick="pt17"
        android:text="@string/pt17"
        android:textColor="@color/medicinaltextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button17" />

    <Button
        android:id="@+id/button19"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:background="@color/medicinalbackgroundColor"
        android:onClick="pt18"
        android:text="@string/pt18"
        android:textColor="@color/medicinaltextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button18" />

    <Button
        android:id="@+id/button20"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:background="@color/medicinalbackgroundColor"
        android:onClick="pt19"
        android:text="@string/pt19"
        android:textColor="@color/medicinaltextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button19" />

    <Button
        android:id="@+id/button21"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:background="@color/medicinalbackgroundColor"
        android:onClick="pt20"
        android:text="@string/pt20"
        android:textColor="@color/medicinaltextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button20" />

    <Button
        android:id="@+id/button22"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="150dp"
        android:layout_marginRight="150dp"
        android:background="@color/medicinalbackgroundColor"
        android:onClick="prev"
        android:text="@string/prev"
        android:textColor="@color/medicinaltextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button21" />
</androidx.constraintlayout.widget.ConstraintLayout>